--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background1"
     android:orientation="vertical"
-    tools:context=".MainActivity"
-    android:background="@drawable/background1">
+    tools:context=".MainActivity">
 
-    <android.support.v4.widget.NestedScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -25,8 +24,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Enter your Birthdate"
-                android:textStyle="bold"
-                android:textColor="#ffffff" />
+                android:textColor="#ffffff"
+                android:textStyle="bold" />
 
             <DatePicker
                 android:id="@+id/datePicker1"
@@ -39,9 +38,9 @@
                 android:id="@+id/ctv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="Enter the current date "
                 android:textColor="#ffffff"
-                android:textStyle="bold"
-                android:text="Enter the current date " />
+                android:textStyle="bold" />
 
             <DatePicker
                 android:id="@+id/datePicker2"
@@ -54,61 +53,61 @@
                 android:id="@+id/calculateBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Calculate"
-                android:background="@color/colorPrimary"
                 android:layout_margin="20dp"
+                android:background="@color/colorPrimary"
+                android:text="Calculate"
                 android:textStyle="bold" />
 
 
             <TextView
+                android:id="@+id/resulttxtTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Result is: "
-                android:id="@+id/resulttxtTV"
                 android:padding="20dp"
-                android:visibility="gone"
+                android:text="Result is: "
                 android:textColor="#ffffff"
-                android:textSize="@android:dimen/app_icon_size" />
+                android:textSize="@android:dimen/app_icon_size"
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/resultyearTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="#ffffff"
                 android:textSize="@android:dimen/app_icon_size"
-                android:textStyle="bold"
-                android:textColor="#ffffff" />
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/resultmonthTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="#ffffff"
                 android:textSize="@android:dimen/app_icon_size"
-                android:textStyle="bold"
-                android:textColor="#ffffff" />
+                android:textStyle="bold" />
 
             <TextView
-                android:padding="20dp"
                 android:id="@+id/resultdayTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:padding="20dp"
+                android:textColor="#ffffff"
                 android:textSize="@android:dimen/app_icon_size"
-                android:textStyle="bold"
-                android:textColor="#ffffff" />
+                android:textStyle="bold" />
 
             <Button
                 android:id="@+id/backBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:background="@color/colorPrimary"
                 android:onClick="backclick"
                 android:text="Back"
-                android:background="@color/colorPrimary"
-                android:visibility="gone"
-                android:layout_margin="20dp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:visibility="gone" />
 
         </LinearLayout>
 
-    </android.support.v4.widget.NestedScrollView>
+    </androidx.core.widget.NestedScrollView>
 
 
 </LinearLayout>
